# mimi.ganba.re

./: .gitignore  README.md  pyproject.toml  shell.nix
.githooks/: pre-push
.github/workflows/: deploy-pages.yml  deploy-worker.yml  deploy.yml
data/phonetic_training/morae/: 00_synthesize.py  01_diagnose.py  02_classify.py  diagnostics.tsv
data/phonetic_training/morae/carrier_cache/: canonical.json
data/phonetic_training/morae/needs_review/: results.md
data/phonetic_training/words/: 01_find_minimal_pairs.py  02_build_judge_words.py  03_split_judge_batches.py  04_merge_judgments.py  05_filter_pairs.py  06_synthesize.py
data/phonetic_training/words/data/: hard_words.tsv  hi_freq.txt  kyoiku.txt  picks_30.tsv
data/phonetic_training/words/data/judgments/: word_judgments.tsv  words_to_judge.tsv
data/phonetic_training/words/data/pairs/: hard_minimal_pairs_n2_n2.tsv  hard_minimal_pairs_n2_n2_filtered.tsv  (+4 more)
data/vocab/: jlpt_n1.tsv  jlpt_n2.tsv  jlpt_n3.tsv  jlpt_n4.tsv  jlpt_n5.tsv
scripts/: build.py  dev.sh  minify.py  transcode_audio.py  voicemap.py
src/: app.css  app.js  index.html  reminders.js  render.js
src/admin/: admin.css  admin.js  index.html
src/dashboard/: dashboard.css  dashboard.js  index.html
src/main/: app.js  grind.js  reminders.js  render.js  tips.js
src/privacy/: index.html  privacy.css
src/shared/: dates.js  skill.js
worker/: .gitignore  README.md  package-lock.json  package.json  schema.sql  seed.sql  smoke.mjs  smoke.sh  snapshot.sh  wrangler.toml
worker/src/: index.js  migrations.js  voicemap.js
(+16 files in other folders)
